# sharents

./: .gitignore  LICENSE.md  README.md  docker-compose.yaml  pyproject.toml
client/: README.md
frontend_app/: Dockerfile.dev  fetchWrapper.js  package-lock.json  package.json
frontend_app/public/: manifest.json
frontend_app/src/: App.js  fetchWrapper.js  index.js  utils.js
frontend_app/src/components/: Category.jsx  DesktopMenuItem.jsx  Home.jsx  Landing.jsx  Login.jsx  MemberLanding.jsx  MobileMeniItem.jsx  Navbar.jsx  ProtectedGuardianRoute.jsx  ProtectedRoute.jsx
frontend_app/src/components/comments/: Comments.jsx
frontend_app/src/components/events/: EventExpandedView.jsx  EventsPage.jsx  WishlistPage.jsx
frontend_app/src/components/forms/: CreateMilestone.jsx  GuardianDashboard.jsx  GuardianSignup.jsx  InviteMember.jsx  Login.jsx  Logout.jsx  MemberSignup.jsx  Signup.jsx
frontend_app/src/components/homepage/: Home.jsx  HomeEvents.jsx  HomeHero.jsx  HomeMedia.jsx
frontend_app/src/components/media/: MediaBox.jsx  MediaExpandedView.jsx  MediaPage.jsx
frontend_app/src/components/milestones/: MilestoneBox.jsx  MilestoneExpandedView.jsx  MilestonesPage.jsx
frontend_app/src/components/typography/: Styled.js
frontend_app/src/context/: AuthContext.jsx  ChildContext.jsx
journals/: Clarissa.md  Linda.md
sharents_dev/brain/: main.py  pyproject.toml
sharents_dev/children_service/: Dockerfile.dev  pyproject.toml
sharents_dev/children_service/app/: database.py  main.py  models.py  routes.py  schemas.py
sharents_dev/events_service/: Dockerfile.dev  pyproject.toml
sharents_dev/events_service/app/: database.py  main.py  models.py  routes.py  schemas.py
sharents_dev/guardian_service/: Dockerfile.dev  invite_service.py  mail.py  pyproject.toml  routes.py  user_service.py  utils.py
sharents_dev/guardians_service/: Dockerfile.dev
sharents_dev/guardians_service/app/: guardians_service.py  main.py  routes.py  schemas.py  utils.py
sharents_dev/members_service/: Dockerfile.dev
sharents_dev/members_service/app/: main.py  member_service.py  routes.py  schemas.py
sharents_dev/milestones_media_service/: Dockerfile.dev  pyproject.toml
sharents_dev/milestones_media_service/app/: database.py  main.py  models.py  routes.py  schemas.py  test_main.py  test_routes.py  utils.py
sharents_dev/user_management_microservice/: pyproject.toml
sharents_dev/user_management_microservice/app/: database.py  main.py  models.py  routes.py  schemas.py
sharents_dev/users_service/: Dockerfile.dev  pyproject.toml
sharents_dev/users_service/app/: auth.py  database.py  guardian_service.py  invite_service.py  mail.py  main.py  member_service.py  models.py  routes.py  schemas.py  user_service.py  utils.py
test_scripts/: dummy_users.csv  pyproject.toml  test_create_users.py
traefik/conf/: traefik_config.yml
(+16 files in other folders)
