
[tool.poetry]
name = "sharents-dev"
version = "0.1.0"
description = "Sharents is a user-friendly app that helps guardians share and track their baby's milestones with family and friends. It provides a comprehensive platform for documenting and celebrating a child's growth, ensuring that loved ones stay connected, no matter the distance."
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^24.8.0"
djlint = "^1.34.1"
flake8 = "^7.1.1"
fastapi = "^0.112.0"
motor = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
