
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Clarissa Lopez","Caleb Saunders","Linda Woo"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "4.8.0"
black = "^24.8.0"
djlint = "^1.34.1"
flake8 = "^7.1.1"
fastapi = "^0.112.0"
motor = "^3.5.1"
uvicorn = "^0.22.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
