
[tool.poetry]
name = "user_management_microservice"
version = "0.1.0"
description = ""
authors = ["Clarissa Lopez","Caleb Saunders","Linda Woo"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^24.8.0"
djlint = "^1.34.1"
flake8 = "^7.1.1"
fastapi = "^0.112.0"
motor = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
